--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
 	"require": {
 		"twig/twig": "^2.5",
 		"twig/extensions": "^1.5",
-		"fortawesome/font-awesome": "^4.7"
+		"fortawesome/font-awesome": "^4.7",
+		"illuminate/database": "^5.7",
+		"illuminate/events": "^5.7"
 	}
 }
