--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"twig/extensions": "^1.5",
 		"fortawesome/font-awesome": "^4.7",
 		"illuminate/database": "^5.7",
-		"illuminate/events": "^5.7"
+		"illuminate/events": "^5.7",
+		"twbs/bootstrap": "^4.3"
 	}
 }
